--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1>
-  {{title}}
-</h1>
+<div class="navbar">
+  <app-navbar></app-navbar>
+</div>
+<div class="content">
+  <router-outlet></router-outlet>
+</div>
