--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,3 +1,25 @@
-<p>
-  navbar works!
-</p>
+
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+  <header class="mdl-layout__header">
+    <div class="mdl-layout__header-row">
+      <!-- Title -->
+      <span class="mdl-layout-title">Muralme</span>
+      <!-- Add spacer, to align navigation to the right -->
+      <div class="mdl-layout-spacer"></div>
+      <!-- Navigation. We hide it in small screens. -->
+      <nav class="mdl-navigation mdl-layout--large-screen-only">
+        <a class="mdl-navigation__link" routerLink="about">about</a>
+        <a class="mdl-navigation__link" routerLink="contact">contact</a>
+          <a class="mdl-navigation__link" routerLink="create">create</a>
+      </nav>
+    </div>
+  </header>
+  <div class="mdl-layout__drawer">
+    <span class="mdl-layout-title">Muralme</span>
+    <nav class="mdl-navigation">
+      <a class="mdl-navigation__link" routerLink="about">about</a>
+      <a class="mdl-navigation__link" routerLink="contact">contact</a>
+      <a class="mdl-navigation__link" routerLink="create">create</a>
+    </nav>
+  </div>
+</div>
