create entire addArtist form with click function

--- a/src/app/create-new/create-new.component.html
+++ b/src/app/create-new/create-new.component.html
@@ -1,3 +1,32 @@
-<p>
-  create-new works!
-</p>
+
+<h3>add an artist:</h3>
+<div class="mdl-textfield mdl-js-textfield">
+  <input #name [(ngModel)]="selectedArtist.name" class="mdl-textfield__input" type="text" >
+  <label class="mdl-textfield__label" for="sample1">artist name</label>
+</div>
+<div  class="mdl-textfield mdl-js-textfield">
+  <input #bio [(ngModel)]="selectedArtist.bio" class="mdl-textfield__input" type="text" >
+  <label class="mdl-textfield__label" for="sample1">bio</label>
+</div>
+<div class="mdl-textfield mdl-js-textfield">
+  <input #style [(ngModel)]="selectedArtist.style" class="mdl-textfield__input" type="text" >
+  <label class="mdl-textfield__label" for="sample1">Style</label>
+</div>
+<div class="mdl-textfield mdl-js-textfield">
+  <input #paint [(ngModel)]="selectedArtist.paint" class="mdl-textfield__input" type="text" >
+  <label class="mdl-textfield__label" for="sample1">paints used</label>
+</div>
+<div #price class="mdl-textfield mdl-js-textfield">
+  <input [(ngModel)]="selectedArtist.price" class="mdl-textfield__input" type="number" >
+  <label class="mdl-textfield__label" for="sample1">starting price</label>
+</div>
+<div class="mdl-textfield mdl-js-textfield">
+  <input #imageurl [(ngModel)]="selectedArtist.imageurl" class="mdl-textfield__input" type="text" >
+  <label class="mdl-textfield__label" for="sample1">url to image</label>
+</div>
+<br>
+<br>
+<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored" (click)="addArtist(name.value, bio.value, style.value, paint.value, price.value, imageurl.value)">
+  <i class="material-icons">close</i>
+</button>
+</div>
