--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -1,3 +1,36 @@
-<p>
-  edit works!
-</p>
+<div>
+  <button (click)="showEditForm()">Edit</button>
+</div>
+<div *ngIf="editFormShown">
+  <h3>Edit a Artist:</h3>
+  <div class="mdl-textfield mdl-js-textfield">
+    <input [(ngModel)]="selectedArtist.name" class="mdl-textfield__input" type="text" >
+    <label class="mdl-textfield__label" for="sample1">artist name</label>
+  </div>
+  <div  class="mdl-textfield mdl-js-textfield">
+    <input [(ngModel)]="selectedArtist.bio" class="mdl-textfield__input" type="text" >
+    <label class="mdl-textfield__label" for="sample1">bio</label>
+  </div>
+  <div class="mdl-textfield mdl-js-textfield">
+    <input [(ngModel)]="selectedArtist.style" class="mdl-textfield__input" type="text" >
+    <label class="mdl-textfield__label" for="sample1">Style</label>
+  </div>
+  <div class="mdl-textfield mdl-js-textfield">
+    <input [(ngModel)]="selectedArtist.paint" class="mdl-textfield__input" type="text" >
+    <label class="mdl-textfield__label" for="sample1">paints used</label>
+  </div>
+  <div class="mdl-textfield mdl-js-textfield">
+    <input [(ngModel)]="selectedArtist.imageurl" class="mdl-textfield__input" type="text" >
+    <label class="mdl-textfield__label" for="sample1">url to image</label>
+  </div>
+  <div class="mdl-textfield mdl-js-textfield">
+    <input [(ngModel)]="selectedArtist.price" class="mdl-textfield__input" type="number" >
+    <label class="mdl-textfield__label" for="sample1">starting price</label>
+  </div>
+  <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored" (click)="updateArtist(selectedArtist)">
+  <i class="material-icons">edit</i>
+</button>
+<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored" (click)="cancelEdit()">
+<i class="material-icons">close</i>
+</button>
+</div>
