create basic display to make sure firebase is pulling in

--- a/src/app/artist-detail/artist-detail.component.html
+++ b/src/app/artist-detail/artist-detail.component.html
@@ -1,3 +1,4 @@
-<p>
-  artist-detail works!
-</p>
+<div class="artist-header">
+  <h2>{{artistToDisplay?.name}}</h2>
+  <p>By {{artistToDisplay?.bio}} &nbsp;<img src="{{artistToDisplay?.imageurl}}" class="creator-pics"> {{artistToDisplay?.style}}</p>
+</div>
