--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -31,6 +31,6 @@
   <i class="material-icons">edit</i>
 </button>
 <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored" (click)="cancelEdit()">
-<i class="material-icons">close</i>
+<i class="material-icons">cancel</i>
 </button>
 </div>
