--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
         <div class="panel-body">
           <h3>{{artist.name}}</h3> <img src="{{artist.imageurl}}" alt="images of {{artist.name}}'s art work" /> <h4>{{artist.bio}}</h4>
           <h4>{{artist.price}}</h4>
-
+          <app-edit-artist [selectedArtist]="artist"></app-edit-artist>
         </div>
       </div>
     </div>
