--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,3 +13,8 @@
 <div class="content">
   <router-outlet></router-outlet>
 </div>
+<footer class="footer">
+  <div class="container">
+    <a class="text-muted" routerLink="admin">Admin</a>
+  </div>
+</footer>
