--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,7 +1,7 @@
 <main class="mdl-layout__content">
   <div class="page-content">
     <div class="content-grid mdl-grid">
-      <div *ngFor="let artist of artists | async" class="mdl-cell project-cells" (click)="goToDetailPage(artist)">
+      <div *ngFor="let artist of artists | async" class="mdl-cell project-cells">
         <div class="panel-body">
           <h3>{{artist.name}}</h3> <img src="{{artist.imageurl}}" alt="images of {{artist.name}}'s art work" /> <h4>{{artist.bio}}</h4>
           <h4>{{artist.price}}</h4>
@@ -11,34 +11,4 @@
     </div>
   </div>
 </main>
-<h3>add an artist:</h3>
-<div class="mdl-textfield mdl-js-textfield">
-  <input #name [(ngModel)]="selectedArtist.name" class="mdl-textfield__input" type="text" >
-  <label class="mdl-textfield__label" for="sample1">artist name</label>
-</div>
-<div  class="mdl-textfield mdl-js-textfield">
-  <input #bio [(ngModel)]="selectedArtist.bio" class="mdl-textfield__input" type="text" >
-  <label class="mdl-textfield__label" for="sample1">bio</label>
-</div>
-<div class="mdl-textfield mdl-js-textfield">
-  <input #style [(ngModel)]="selectedArtist.style" class="mdl-textfield__input" type="text" >
-  <label class="mdl-textfield__label" for="sample1">Style</label>
-</div>
-<div class="mdl-textfield mdl-js-textfield">
-  <input #paint [(ngModel)]="selectedArtist.paint" class="mdl-textfield__input" type="text" >
-  <label class="mdl-textfield__label" for="sample1">paints used</label>
-</div>
-<div #price class="mdl-textfield mdl-js-textfield">
-  <input [(ngModel)]="selectedArtist.price" class="mdl-textfield__input" type="number" >
-  <label class="mdl-textfield__label" for="sample1">starting price</label>
-</div>
-<div class="mdl-textfield mdl-js-textfield">
-  <input #imageurl [(ngModel)]="selectedArtist.imageurl" class="mdl-textfield__input" type="text" >
-  <label class="mdl-textfield__label" for="sample1">url to image</label>
-</div>
-<br>
-<br>
-<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored" (click)="addArtist(name.value, bio.value, style.value, paint.value, price.value, imageurl.value)">
-  <i class="material-icons">close</i>
-</button>
-<br>
+<app-create-new></app-create-new>
