successfully edit forms into datebase

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,16 +5,21 @@
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
 <div class="content">
   <router-outlet></router-outlet>
 </div>
 <footer class="footer">
   <div class="container">
-    <a class="text-muted" routerLink="admin">Admin</a>
+
   </div>
 </footer>
+<footer class="mdl-mini-footer">
+  <div class="mdl-mini-footer__left-section">
+    <div class="mdl-logo">Title</div>
+    <ul class="mdl-mini-footer__link-list">
+      <li><a href="#">Privacy & Terms</a></li>
+    </ul>
+  </div>
+</footer>
+<li></li>
+<a class="text-muted" routerLink="admin">Admin</a>
