--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -5,10 +5,12 @@
         <div class="panel-body">
           <h3>{{artist.name}}</h3> <img src="{{artist.imageurl}}" alt="images of {{artist.name}}'s art work" /> <h4>{{artist.bio}}</h4>
           <h4>{{artist.price}}</h4>
+          <h4>{{artist.style}}</h4>
+          <h4>{{artist.paint}}</h4>
           <app-edit [selectedArtist]="artist"></app-edit>
         </div>
       </div>
     </div>
+    <app-create-new></app-create-new>
   </div>
 </main>
-<app-create-new></app-create-new>
