display only some info on the main page, but all properties on the details page

--- a/src/app/artist-detail/artist-detail.component.html
+++ b/src/app/artist-detail/artist-detail.component.html
@@ -1,4 +1,7 @@
 <div class="artist-header">
   <h2>{{artistToDisplay?.name}}</h2>
-  <p>By {{artistToDisplay?.bio}} &nbsp;<img src="{{artistToDisplay?.imageurl}}" class="creator-pics"> {{artistToDisplay?.style}}</p>
+  <p>{{artistToDisplay?.bio}} &nbsp;<img src="{{artistToDisplay?.imageurl}}" class="creator-pics"> {{artistToDisplay?.style}}</p>
+  {{artistToDisplay?.paint}}
+  {{artistToDisplay?.price}}
+
 </div>
