start buildout of the filer pipe

--- a/src/app/create-new/create-new.component.html
+++ b/src/app/create-new/create-new.component.html
@@ -16,13 +16,13 @@
   <label  class="mdl-textfield__label" for="sample1">paints used</label>
 </div>
 <div class="mdl-textfield mdl-js-textfield">
-  <input #imageurl [(ngModel)]="selectedArtist.imageurl" class="mdl-textfield__input" type="text" >
-  <label class="mdl-textfield__label" for="sample1">url to image</label>
-</div>
-<div class="mdl-textfield mdl-js-textfield">
   <input #price [(ngModel)]="selectedArtist.price" class="mdl-textfield__input" type="number" >
   <label class="mdl-textfield__label" for="sample1">starting price</label>
 </div>
-<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored" (click)="addProject(name.value, bio.value, style.value, paint.value, imageurl.value, price.value)">
+<div class="mdl-textfield mdl-js-textfield">
+  <input #imageurl [(ngModel)]="selectedArtist.imageurl" class="mdl-textfield__input" type="text" >
+  <label class="mdl-textfield__label" for="sample1">url to image</label>
+</div>
+<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored" (click)="addArtist(name.value, bio.value, style.value, paint.value, imageurl.value, price.value)">
   <i class="material-icons">add</i>
 </button>
