add and fix select menu for pipe

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -3,7 +3,8 @@
     <div class="content-grid mdl-grid">
       <div *ngFor="let artist of artists | async" class="mdl-cell project-cells">
         <div class="panel-body">
-          <h3>{{artist.name}}</h3> <img src="{{artist.imageurl}}" alt="images of {{artist.name}}'s art work" /> <h4>{{artist.bio}}</h4>
+          <h3>{{artist.name}}</h3>
+          <img src="{{artist.imageurl}}" alt="images of {{artist.name}}'s art work" /> <h4>{{artist.bio}}</h4>
           <h4>{{artist.price}}</h4>
           <h4>{{artist.style}}</h4>
           <h4>{{artist.paint}}</h4>
@@ -11,6 +12,10 @@
         </div>
       </div>
     </div>
-    <app-create-new></app-create-new>
   </div>
 </main>
+<app-create-new></app-create-new>
+<!-- 
+<app-home></app-home>
+<app-edit></app-edit>
+<app-create-new></app-create-new> -->
