--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,18 +8,13 @@
 <div class="content">
   <router-outlet></router-outlet>
 </div>
-<footer class="footer">
-  <div class="container">
 
-  </div>
-</footer>
 <footer class="mdl-mini-footer">
   <div class="mdl-mini-footer__left-section">
     <div class="mdl-logo">Title</div>
     <ul class="mdl-mini-footer__link-list">
       <li><a href="#">Privacy & Terms</a></li>
+      <li><a class="mdl-navigation__link" routerLink="admin">admin</a></li>
     </ul>
   </div>
 </footer>
-<li></li>
-<a class="text-muted" routerLink="admin">Admin</a>
