add styling to admin page, need more work

--- a/src/app/create-new/create-new.component.html
+++ b/src/app/create-new/create-new.component.html
@@ -23,6 +23,6 @@
   <input #imageurl [(ngModel)]="selectedArtist.imageurl" class="mdl-textfield__input" type="text" >
   <label class="mdl-textfield__label" for="sample1">url to image</label>
 </div>
-<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored" (click)="addArtist(name.value, bio.value, style.value, paint.value, imageurl.value, price.value)">
+<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored" (click)="addArtist(name.value, bio.value, style.value, paint.value, price.value, imageurl.value)">
   <i class="material-icons">add</i>
 </button>
