--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,10 +1,10 @@
 <main class="mdl-layout__content">
   <div class="page-content">
     <div class="content-grid mdl-grid">
-      <div *ngFor="let artist of artists | async" class="mdl-cell project-cells">
-        <div class="panel-body">
+      <div *ngFor="let artist of artists | async | artist:filterByArtist" class="mdl-cell project-cells">
+        <div >
           <h3>{{artist.name}}</h3>
-          <img src="{{artist.imageurl}}" alt="images of {{artist.name}}'s art work" /> <h4>{{artist.bio}}</h4>
+          <img src="{{artist.imageurl}}"/> <h4>{{artist.bio}}</h4>
           <h4>{{artist.price}}</h4>
           <h4>{{artist.style}}</h4>
           <h4>{{artist.paint}}</h4>
@@ -15,7 +15,3 @@
   </div>
 </main>
 <app-create-new></app-create-new>
-<!-- 
-<app-home></app-home>
-<app-edit></app-edit>
-<app-create-new></app-create-new> -->
