--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="content-grid mdl-grid">
       <div *ngFor="let artist of artists | async | artist:filterByArtist" class="mdl-cell project-cells" (click)="goToDetailPage(artist)">
         <div class="panel-body">
-          <h3>{{artist.name}}</h3> <img src="{{artist.imageurl}}" alt="images of {{artist.name}}'s art work" />
+          <h3>{{artist.name}}</h3> <img src="{{artist.imageurl}}"  />
         </div>
       </div>
     </div>
