--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,16 @@
-<div class="navbar">
-  <app-navbar></app-navbar>
-</div>
+<app-navbar></app-navbar>
 <br>
 <br>
 <br>
 <br>
-<div class="content">
-  <router-outlet></router-outlet>
-</div>
-
+<br>
+<br>
+<router-outlet></router-outlet>
 <footer class="mdl-mini-footer">
   <div class="mdl-mini-footer__left-section">
-    <div class="mdl-logo">Title</div>
+    <div class="mdl-logo">muralme</div>
     <ul class="mdl-mini-footer__link-list">
-      <li><a href="#">Privacy & Terms</a></li>
+      <li><a href="www.facebook.com">epicodus</a></li>
       <li><a class="mdl-navigation__link" routerLink="admin">admin</a></li>
     </ul>
   </div>
