--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,3 @@
-<p>
-  about works!
-</p>
+<h5>
+This application is for users to find and connect with mural artists for hire.  It's a database of mural artists from around the world, giving the user the choice to hire any of the artists.
+</h5>
