--- a/src/app/artist-detail/artist-detail.component.html
+++ b/src/app/artist-detail/artist-detail.component.html
@@ -1,6 +1,8 @@
-<div class="artist-header">
+<div class="" mdl-shadow--2dp>
+
   <h2>{{artistToDisplay?.name}}</h2>
-  <p>{{artistToDisplay?.bio}} &nbsp;<img src="{{artistToDisplay?.imageurl}}" class="creator-pics"> {{artistToDisplay?.style}}</p>
+  <img src="{{artistToDisplay?.imageurl}}" class="creator-pics">
+  <p>{{artistToDisplay?.bio}} &nbsp; {{artistToDisplay?.style}}</p>
   {{artistToDisplay?.paint}}
   {{artistToDisplay?.price}}
 </div>
