--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,20 +1,45 @@
-<main class="mdl-layout__content">
-  <div class="page-content">
-    <div class="content-grid mdl-grid">
-      <div *ngFor="let artist of artists | async | artist:filterByArtist" class="mdl-cell project-cells" (click)="goToDetailPage(artist)">
-        <div class="panel-body">
-          <h3>{{artist.name}}</h3> <img src="{{artist.imageurl}}"  />
+
+
+  <main class="mdl-layout__content">
+
+    <div class="body">
+      <div class="page-content">
+        <div  class="content-grid mdl-grid">
+          <div   *ngFor="let artist of artists | async | artist:filterByArtist" class="mdl-cell project-cells" >
+            <div class="demo-card-wide mdl-card mdl-shadow--2dp">
+              <div class="mdl-card__media">
+                <img (click)="goToDetailPage(artist)" src="{{artist.imageurl}}" alt="">
+              </div>
+
+              <h2 class="mdl-card__title-text"></h2>
+              <div class="mdl-card__supporting-text">
+                <p>{{artist.bio}}</p>
+              </div>
+              <div class="mdl-card__actions mdl-card--border">
+                <a class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--light-blue-900">Read More</a>
+                <div class="mdl-layout-spacer"></div>
+                <button class="mdl-button mdl-button--icon mdl-color-text--blue-grey-300"><i class="material-icons">favorite</i></button>
+                <button id="share-post-1" class="mdl-button mdl-button--icon mdl-color-text--blue-grey-300"><i class="material-icons">share</i></button>
+                <ul class="mdl-menu mdl-menu--top-right mdl-js-menu" for="share-post-1">
+                  <li class="mdl-menu__item">Facebook</li>
+                  <li class="mdl-menu__item">Twitter</li>
+                  <li class="mdl-menu__item">Pinterest</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+        <hr>
+        <div class="mdl-selectfield">
+          <select id="pricing" (change)="onChange($event.target.value)">
+            <option value="">all artists</option>
+            <option value="highCost">high</option>
+            <option value="lowCost">low</option>
+          </select>
+          <label class="mdl-selectfield__label" for="pricing">pricing</label>
         </div>
       </div>
     </div>
-    <div class="mdl-selectfield">
-      <select id="pricing" (change)="onChange($event.target.value)">
-        <option value=""></option>
-        <option value="highCost">high</option>
-        <option value="lowCost">low</option>
-      </select>
-      <label class="mdl-selectfield__label" for="pricing">pricing</label>
-    </div>
-    <li><a class="mdl-navigation__link" routerLink="admin">Admin</a></li>
-  </div>
-</main>
+  </main>
