--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,3 +1,4 @@
+<div class="navbar">
 
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
   <header class="mdl-layout__header">
@@ -18,12 +19,4 @@
     </nav>
   </div>
 </div>
-<footer class="mdl-mini-footer">
-  <div class="mdl-mini-footer__left-section">
-    <div class="mdl-logo">Title</div>
-    <ul class="mdl-mini-footer__link-list">
-      <li><a href="#">Privacy & Terms</a></li>
-      <li><a class="mdl-navigation__link" routerLink="admin">Admin</a></li>
-    </ul>
-  </div>
-</footer>
+</div>
