align share / facebook icons

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -21,3 +21,14 @@ img {
 #select {
 text-align: center;
 margin-bottom: 7px;}
+
+.mdl-card__actions {
+	display: flex;
+	box-sizing:border-box;
+	align-items: center;
+}
+
+.mdl-card__actions > .mdl-button--icon {
+	margin-right: 3px;
+	margin-left: 3px;
+}
