--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
               <p>{{artist.bio}}</p>
             </div>
             <div class="mdl-card__actions mdl-card--border">
-              <a class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--light-blue-900">Read More</a>
+              <a class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--light-blue-900">{{artist.name}}</a>
               <div class="mdl-layout-spacer"></div>
               <button class="mdl-button mdl-button--icon mdl-color-text--blue-grey-300"><i class="material-icons">favorite</i></button>
               <button id="share-post-1" class="mdl-button mdl-button--icon mdl-color-text--blue-grey-300"><i class="material-icons">share</i></button>
