fix admin bug - all pages work

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+
+
 <app-navbar></app-navbar>
 <br>
 <br>
@@ -8,7 +10,7 @@
 <router-outlet></router-outlet>
 <footer class="mdl-mini-footer">
   <div class="mdl-mini-footer__left-section">
-    <div class="mdl-logo">muralme</div>
+    <div class="mdl-logo" class="mdl-navigation__link" routerLink="" >muralme</div>
     <ul class="mdl-mini-footer__link-list">
       <li><a href="www.facebook.com">epicodus</a></li>
       <li><a class="mdl-navigation__link" routerLink="admin">admin</a></li>
