--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,7 +1,9 @@
+
 <main class="mdl-layout__content">
+
   <div class="page-content">
     <div class="content-grid mdl-grid">
-      <div *ngFor="let artist of artists | async | artist:filterByArtist" class="mdl-cell project-cells">
+      <div *ngFor="let artist of artists | async" class="mdl-cell project-cells">
         <div >
           <h3>{{artist.name}}</h3>
           <img src="{{artist.imageurl}}"/> <h4>{{artist.bio}}</h4>
@@ -14,5 +16,6 @@
       </div>
     </div>
   </div>
+
 </main>
 <app-create-new></app-create-new>
