--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,33 +1,44 @@
+
+
+
 <main class="mdl-layout__content">
-  <div class="body">
-    <div class="page-content">
-      <div  class="content-grid mdl-grid">
-        <div   *ngFor="let artist of artists | async | artist:filterByArtist" class="mdl-cell project-cells" >
-          <div class="demo-card-wide mdl-card mdl-shadow--2dp">
-            <div class="mdl-card__media">
-              <img (click)="goToDetailPage(artist)" src="{{artist.imageurl}}" alt="">
-            </div>
-            <h2 class="mdl-card__title-text"></h2>
-            <div class="mdl-card__supporting-text">
-              <p>{{artist.bio}}</p>
-            </div>
-            <div class="mdl-card__actions mdl-card--border">
-              <a class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--light-blue-900">{{artist.name}}</a>
-              <div class="mdl-layout-spacer"></div>
-              <button class="mdl-button mdl-button--icon mdl-color-text--blue-grey-300"><i class="material-icons">favorite</i></button>
-              <button id="share-post-1" class="mdl-button mdl-button--icon mdl-color-text--blue-grey-300"><i class="material-icons">share</i></button>
-              <ul class="mdl-menu mdl-menu--top-right mdl-js-menu" for="share-post-1">
-                <li class="mdl-menu__item">Facebook</li>
-                <li class="mdl-menu__item">Twitter</li>
-                <li class="mdl-menu__item">Pinterest</li>
-              </ul>
-            </div>
+
+  <div class="page-content">
+    <div class="content-grid mdl-grid">
+      <div *ngFor="let artist of artists | async" class="mdl-cell project-cells">
+
+        <div class="demo-card-wide mdl-card mdl-shadow--2dp">
+          <div class="mdl-card__media">
+            <img (click)="goToDetailPage(artist)" src="{{artist.imageurl}}" alt="">
+          </div>
+          <div class="mdl-card__title">
+            <h2 class="mdl-card__title-text">Welcome</h2>
+          </div>
+          <div class="mdl-card__supporting-text">
+            {{artist.bio}}
+          </div>
+          <div class="mdl-card__actions mdl-card--border">
+            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+              {{artist.name}}
+            </a>
+          </div>
+          <div class="mdl-layout-spacer"></div>
+    	<button class="mdl-button mdl-button--icon mdl-color-text--blue-grey-300"><i class="material-icons">favorite</i></button>
+					<button id="share-post-1" class="mdl-button mdl-button--icon mdl-color-text--blue-grey-300"><i class="material-icons">share</i></button>
+				<ul class="mdl-menu mdl-menu--top-right mdl-js-menu" for="share-post-1">
+  <li class="mdl-menu__item">Facebook</li>
+  <li class="mdl-menu__item">Twitter</li>
+  <li class="mdl-menu__item">Pinterest</li>
+</ul>
+          <div class="mdl-card__menu">
+            <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+              <i class="material-icons">share</i>
+            </button>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <hr>
   <div id="select" class="mdl-selectfield">
     <select id="pricing" (change)="onChange($event.target.value)">
       <option value="">all artists</option>
@@ -35,6 +46,5 @@
       <option value="lowCost">low</option>
     </select>
     <label class="mdl-selectfield__label" for="pricing">pricing</label>
-  </div>
-
-</main>
+</div>
+<hr>
