--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,21 +1,33 @@
 
-<main class="mdl-layout__content">
+<div class="mdl-grid">
+  <div  *ngFor="let artist of artists | async" class="mdl-cell project-cells">
 
-  <div class="page-content">
-    <div class="content-grid mdl-grid">
-      <div *ngFor="let artist of artists | async" class="mdl-cell project-cells">
-        <div >
-          <h3>{{artist.name}}</h3>
-          <img src="{{artist.imageurl}}"/> <h4>{{artist.bio}}</h4>
-          <h4>{{artist.price}}</h4>
-          <h4>{{artist.style}}</h4>
-          <h4>{{artist.paint}}</h4>
-          <app-edit [selectedArtist]="artist"></app-edit>
-          <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect "  (click)="beginDeletingArtist(artist)"><i class="material-icons">delete_forever</i></button>
-        </div>
+    <div class="mdl-cell mdl-cell--4-col" class="demo-card-wide mdl-card mdl-shadow--2dp">
+      <div class="mdl-card__media">
+        <img (click)="goToDetailPage(artist)" src="{{artist.imageurl}}" alt="">
       </div>
+      <div class="mdl-card__title">
+        <h2 class="mdl-card__title-text">Welcome</h2>
+      </div>
+      <div class="mdl-card__supporting-text">
+        {{artist.bio}}
+      </div>
+      <div class="mdl-card__actions mdl-card--border">
+        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+          {{artist.name}}
+        </a>
+      </div>
+      <div class="mdl-card__menu">
+        <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+          <i class="material-icons">share</i>
+        </button>
+      </div>
+      <app-edit [selectedArtist]="artist"></app-edit>
+      <hr>
     </div>
   </div>
 
-</main>
-<app-create-new></app-create-new>
+</div><app-create-new></app-create-new>
+
+
+<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect "  (click)="beginDeletingArtist(artist)"><i class="material-icons">delete_forever</i></button>
